Fix dynamic linking, fix for lazy keys, branch code tidy up, try to spread the use of final fields.
git-svn-id: http://pearcolator.svn.sourceforge.net/svnroot/pearcolator@10 f9fe5334-281c-0410-a981-a1a969458ad4